--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "codex.transport",
   "exportModuleName": "transport",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "One click file uploader",
-  "main": "./lib/bundle.js",
+  "main": "./src/transport.js",
   "scripts": {
     "build": "webpack"
   },
