--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codex.transport",
   "exportModuleName": "transport",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "One click file uploader",
   "main": "./lib/bundle.js",
   "scripts": {
@@ -24,8 +24,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "codex.ajax": "^2.2.0",
+    "codex.ajax": "^2.3.1",
     "eslint": "^4.9.0",
+    "eslint-loader": "^1.9.0",
     "webpack": "^3.8.1"
   }
 }
